--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-rigger": "^0.5.8",
     "gulp-scss": "^1.4.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "tiny-lr": "^1.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
